# usma_LiDAR

./: CMakeLists.txt  README.md  package.xml  velodyne32E  velodyneDocumentation
launch/: velodyne32e.launch  velodyne_bare.rviz
pc2l/: README.md  package.xml
pc2l/launch/: pc2l_ouster.launch  pc2l_realsense.launch  pc2l_start.launch  pc2l_velodyne.launch
src/: gazebo_ros_gpu_velodyne.cpp
urdf/: velodyne.urdf.xacro
usma_ouster/: README.md
usma_velodyne/: .gitignore  README.md  velodyneVLP16
usma_velodyne/include/usma_velodyne/: gazebo_ros_gpu_velodyne.h
usma_velodyne/launch/: velodyne.launch
usma_velodyne/meshes/: 16.STL  32.STL  mast_link.STL
usma_velodyne/scripts/: start_velodyne_spindle
